@@ -105,6 +105,8 @@ Library
 - Issue #21538: The plistlib module now supports loading of binary plist files
   when reference or offset size is not a power of two.
 
+- Issue #21801: Validate that __signature__ is None or an instance of Signature.
+
 Build
 -----
 
